fixed certification spacing issue 🔧

--- a/Personal Portfolio Page/style.css
+++ b/Personal Portfolio Page/style.css
@@ -67,7 +67,7 @@ a {
 }
 
 h1 {
-  padding: 10px;
+  padding: 10px 0 10px 10px;
 }
 
 #navbar ul {
@@ -249,9 +249,6 @@ h3 {
   text-align: center;
 }
 @media only screen and (max-width: 1030px) {
-  body {
-    font-size: 25px;
-  }
   #skills ul {
     display: flex;
 
@@ -291,7 +288,10 @@ h3 {
     width: 100%;
   }
   #certification {
-    font-size: 20px;
+    flex-direction: column;
+  }
+  #certification div {
+    margin: 10px;
   }
 }
 
@@ -335,7 +335,10 @@ h3 {
     width: 100%;
   }
   #certification {
-    font-size: 12px;
+    flex-direction: column;
+  }
+  #certification div {
+    margin: 10px;
   }
 }
 
